# gen192

./: .gitignore  .pre-commit-config.yaml  APP_NAME.html  README.md  gen192.html  index.html  pyproject.toml  search.js
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: docs.yaml  docs.yml  run.yaml  test.yaml
APP_NAME/: algorithms.html
docs/pdoc-theme/: syntax-highlighting.css  theme.css
gen192/: cli.html  config.html  cpac_config_extractor.html  utils.html
src/APP_NAME/: __init__.py  algorithms.py
src/gen192/: cli.py  config.py  cpac_config_extractor.py  utils.py
tests/: conftest.py  test_cli.py  test_cpac_config_extractor.py  test_fibonacci.py  test_main.py  test_utils.py
