[tool.poetry]
name = "gen192"
version = "0.1.0"
description = "A beautiful description."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "gen192", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.0.0"

[tool.poetry.extras]
docs = ["pdoc"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
gen192 = "gen192.cli:main"
