[tool.poetry]
name = "gen192"
version = "0.1.0"
description = "A beautiful description."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "gen192", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
nipype = "^1.8.6"  # for cpac config expansion
voluptuous = "^0.14.1"  # for cpac config expansion
pathvalidate = "^3.2.0"  # for cpac config expansion
yamlordereddictloader = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.15"
types-pyyaml = "^6.0.12.11"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[tool.poetry.scripts]
gen192 = "gen192.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "^temp"
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
