[project]
authors = [
  {name = "CMI DAIR", email = "dair@childmind.org"}
]
license = "LGPL-2.1"
requires-python = ">=3.10"
name = "gen192"
version = "0.1.0"
description = "A beautiful description."
readme = "README.md"
dependencies = [
  "pyyaml>=6.0.1",
  "nipype==1.8.6",  # for cpac config expansion
  "voluptuous==0.14.2",  # for cpac config expansion
  "pathvalidate==3.2.0",  # for cpac config expansion
  "yamlordereddictloader==0.4.2",  # for cpac config expansion
  "setuptools==78.1.1",  # for cpac config expansion
  "traits==6.3.2"  # for cpac config expansion
]

[project.scripts]
gen192 = "gen192.cli:cli"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.1",
  "types-pyyaml>=6.0.12.20250402",
  "pytest-mock>=3.14.0",
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "^temp"
]

[tool.ruff]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
ignore = [
  "E712"  # Avoid equality comparisons to `True`;
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
